--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 ::-webkit-scrollbar-track {
   background-color: transparent;
 }
@@ -27,10 +28,11 @@
   width: 6px;
   height: 6px;
 }
-
+/*
 html {
   background: #202123;
 }
+*/
 
 @media (max-width: 720px) {
   pre {
@@ -41,4 +43,3 @@ html {
 pre:has(div.codeblock) {
   padding: 0;
 }
-
