--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -234,7 +234,7 @@
     background-clip: padding-box;
     backdrop-filter: blur(24px);
   }
-
+ghgffcfggh hyg
   .description div {
     align-items: flex-end;
     pointer-events: none;
@@ -267,8 +267,7 @@
     filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
   }
 }
-
-@keyframes rotate {
+YIGYGH @keyframes rotate {
   from {
     transform: rotate(360deg);
   }
